creating assets folder

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <title>Frontend Mentor | interactive comments</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-
+    <link href="/assets/style.css" rel="stylesheet" />
 
 </head>
 <body>
     
+
+
+
+
+    <script src="assets/script.js"></script>
 </body>
