fix @ appearing in all comments and identifing answers to comments

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Frontend Mentor | interactive comments</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png"/>
     <link href="/assets/style.css" rel="stylesheet" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap');
@@ -22,6 +23,7 @@
                 </div>
 
                 <div class="comment-txt">
+                    <a class="replyingTo" href="#"></a>
                     <p class="content"></p>
                 </div>
 
@@ -73,7 +75,7 @@
                 </div>  
             </form>
         </div>
-
+        <div style="height: 60vw;"></div>
     </section><!--Post comment-->
 
 
